# shipcolor_opencpn

./: CMakeLists.txt
.github/workflows/: build.yml
src/: CMakeLists.txt  shipcolor_pi.cpp  shipcolor_pi.h
